--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,29 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <strimzi-api.version>0.30.0</strimzi-api.version>
+        <strimzi-api.version>0.31.0</strimzi-api.version>
+        <!-- Should be in sync with the version of Fabric8 used by Strimzi API module-->
+        <fabric8-kubernetes-client.version>6.1.1</fabric8-kubernetes-client.version>
         <slf4j.version>1.7.36</slf4j.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>staging</id>
+            <url>https://oss.sonatype.org/content/repositories/iostrimzi-1181</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
             <groupId>io.strimzi</groupId>
             <artifactId>api</artifactId>
             <version>${strimzi-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-client</artifactId>
+            <version>${fabric8-kubernetes-client.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
