--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <strimzi-api.version>0.31.0</strimzi-api.version>
+        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
+
+        <strimzi-api.version>0.32.0</strimzi-api.version>
         <!-- Should be in sync with the version of Fabric8 used by Strimzi API module-->
-        <fabric8-kubernetes-client.version>6.1.1</fabric8-kubernetes-client.version>
+        <fabric8-kubernetes-client.version>6.2.0</fabric8-kubernetes-client.version>
         <slf4j.version>1.7.36</slf4j.version>
     </properties>
 
@@ -46,6 +50,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
